Add sorting desc

--- a/EON-Reality-Assignment/Views/Home/Index.cshtml
+++ b/EON-Reality-Assignment/Views/Home/Index.cshtml
@@ -46,6 +46,7 @@
                     "datatype": "json",
                     "dataSrc": ""
                 },
+                "order": [],
                 "columns": [
                     { "data": "userName", "autoWidth": true },
                     { "data": "emailAddress", "autoWidth": true },
